--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@ nav{
 	top:50%;
 	left: 50%;
 	transform: translate(-50%,-50%);
-	color: white;
+	color: rgb(0, 0, 0);
 	text-align: center;
 }
 #camera{
@@ -598,4 +598,60 @@ ul{
 	.pricing-section {
 	  grid-template-columns: 
 	}
+}
+
+
+
+
+
+
+
+
+
+
+
+#services {
+    background-color: #9e91ff;
+    padding: 50px;
+}
+
+#services h2 {
+    text-align: center;
+    margin-bottom: 30px;
+}
+
+#services ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+#services li {
+    width: calc(33.33% - 20px);
+    background-color: white;
+    border: 1px solid #ccc;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+    margin-bottom: 30px;
+    transition: transform 0.3s ease-in-out, background-color 0.3s ease-in-out;
+	display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+
+}
+
+#services li:hover {
+    transform: translateY(-5px);
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+    background-color: #f9f9f9;
+}
+
+@media screen and (max-width: 768px) {
+    #services li {
+        width: calc(50% - 20px);
+    }
 }
