--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body{
 header{
 	width: 100vw;
 	height:90vh;
-	background:linear-gradient(rgba(108, 228, 255, 0.8),rgba(108, 228, 255, 0.8)), url('img/banner1.jpg');
+	background:linear-gradient(rgba(108, 228, 255, 0.8),rgba(108, 228, 255, 0.8)), url('img/brief\ 1.jpg');
 	background-size: cover;
 	background-position:fixed;
 	position: relative;
